# av-device-controller

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
config/: displays.cfg
include/: alert.h  controller.h  display.h  logger.h  parser.h
src/: alert.cpp  controller.cpp  display.cpp  logger.cpp  main.cpp  parser.cpp
tests/: test_input.txt  test_parser.cpp
